--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -64,15 +64,15 @@
       institution: University of Lübeck, Lübeck, Germany
       year: 2015 - 2018
       description:
-        - Master thesis: Studies of structural rearrangements on NS34A from Classical Swine Fever Virus with single-molecule fluorescence experiments, Insititute of Physics, University of Lübeck, Germany
-        - Internship: Expression of Prosaposin fragments in <i>Escherichia coli</i> with subsequent crystallization trials, University Health Network, Toronto, Canada
-        - Internship: Isolation of mycobaterial, virulence-associated proteins from Mycobacterium tuberculosis using an expression system in Mycobacterium smegmatis, Institute of Physics, University of Lübeck, Germany
-        - Internship: Profiling of Neutrophilic Granulocytes from Asthma Patients with CellProfiler, Fraunhofer EMB, Lübeck, Germany
+        - Master thesis - Studies of structural rearrangements on NS34A from Classical Swine Fever Virus with single-molecule fluorescence experiments, Insititute of Physics, University of Lübeck, Germany
+        - Internship - Expression of Prosaposin fragments in <i>Escherichia coli</i> with subsequent crystallization trials, University Health Network, Toronto, Canada
+        - Internship - Isolation of mycobaterial, virulence-associated proteins from Mycobacterium tuberculosis using an expression system in Mycobacterium smegmatis, Institute of Physics, University of Lübeck, Germany
+        - Internship - Profiling of Neutrophilic Granulocytes from Asthma Patients with CellProfiler, Fraunhofer EMB, Lübeck, Germany
     - title: Bachelor of Science in Molecular Life Science
       institution: University of Lübeck, Lübeck, Germany
       year: 2012 - 2015
       description:
-        - Bachelor thesis: Establishment of a Protocol for Expression and Purification of Human Argonaute 3 Protein
+        - Bachelor thesis - Establishment of a Protocol for Expression and Purification of Human Argonaute 3 Protein
     - title: Graduation - Abitur
       institution: Robert Bosch Gymnasium, Wendlingen, Germany
       year: 2003 - 2012
