--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -66,7 +66,7 @@
       description:
         - Master thesis - Studies of structural rearrangements on NS34A from Classical Swine Fever Virus with single-molecule fluorescence experiments, Insititute of Physics, University of Lübeck, Germany
         - Internship - Expression of Prosaposin fragments in <i>Escherichia coli</i> with subsequent crystallization trials, University Health Network, Toronto, Canada
-        - Internship - Isolation of mycobaterial, virulence-associated proteins from Mycobacterium tuberculosis using an expression system in Mycobacterium smegmatis, Institute of Physics, University of Lübeck, Germany
+        - Internship - Isolation of mycobaterial, virulence-associated proteins from <i>Mycobacterium tuberculosis</i> using an expression system in <i>Mycobacterium smegmatis</i>, Institute of Physics, University of Lübeck, Germany
         - Internship - Profiling of Neutrophilic Granulocytes from Asthma Patients with CellProfiler, Fraunhofer EMB, Lübeck, Germany
     - title: Bachelor of Science in Molecular Life Science
       institution: University of Lübeck, Lübeck, Germany
