--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -17,6 +17,9 @@
     - title: Online Marketing Manager (Paid Search)
       institution: bonprix HmbH, Hamburg, Germany
       year: 2024.04
+      description:
+        - Steering of performance marketing campaigns on google and bing
+        - Automation of processes in online marketing using Python programming
 
     - title: Tutor (part-time)
       institution: Schülerhilfe, Lübeck, Germany
@@ -27,6 +30,9 @@
     - title: Online Marketing Manager (Social Media Advertising)
       institution: bonprix HmbH, Hamburg, Germany
       year: 2023.05 - 2024.03
+      description:
+        - Steering of performance marketing campaigns on meta
+        - Automation of processes in online marketing using Python programming
    
     - title: Jr. Online Marketing Manager (Social Media Advertising)
       institution: bonprix HmbH, Hamburg, Germany
