--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -47,19 +47,19 @@
         - Development of an automated workflow using Python programming and R to process and analyze genome-wide methylation profiles
         - Investigation of epigenetic profiles associated with human aging and neurodegenerative diseases
 
-    - title: Student helper
+    - title: Student helper (part-time)
       institution: Lübeck Interdisciplinary Platform for Genome Analytics, Lübeck, Germany
       year: 2018.08 - 2019.01
       description:
         - Extraction of DNA from buccal swabs for genome-wide association studies in humans
 
-    - title: Student helper
+    - title: Student helper (part-time)
       institution: Institute of Physics, University of Lübeck, Germany
       year: 2017.10 - 2018.04
       description:
         - Tutoring students in the practical courses for physics and biophysics
 
-    - title: Student helper
+    - title: Student helper (part-time)
       institution: Institute of Chemistry, University of Lübeck, Germany
       year: 2013.10 - 2014.10
       description:
