--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -5,6 +5,8 @@
       value: Yasmine Sommerer
     - name: Date of Birth
       value: 15th February 1993
+    - name: Nationality
+      value: German
     - name: Languages
       value: German (native), English (C1), Mandarin (A2)
     - name: Programming Languages
