--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -18,52 +18,56 @@
   type: time_table
   contents:
 
+      - title: Data Developer (Digital Marketing)
+      institution: bonprix HmbH, Hamburg, Germany
+      year: 10.2024
+
     - title: Online Marketing Manager (Paid Search)
       institution: bonprix HmbH, Hamburg, Germany
-      year: 2024.04
+      year: 04.2024 - 10.2024
       description:
         - Steering of performance marketing campaigns on google and bing
         - Automation of processes in online marketing using Python programming
 
     - title: Tutor (part-time)
       institution: Schülerhilfe, Lübeck, Germany
-      year: 2024.03
+      year: 03.2024
       description:
         - Tutoring school kids for all science subjects (maths, physics, chemistry, biology)
   
     - title: Online Marketing Manager (Social Media Advertising)
       institution: bonprix HmbH, Hamburg, Germany
-      year: 2023.05 - 2024.03
+      year: 04.2023 - 03.2024
       description:
         - Steering of performance marketing campaigns on meta
         - Automation of processes in online marketing using Python programming
    
     - title: Jr. Online Marketing Manager (Social Media Advertising)
       institution: bonprix HmbH, Hamburg, Germany
-      year: 2022.07 - 2023.04
+      year: 07.2022 - 04.2023
   
     - title: PhD Student
       institution: Lübeck Interdisciplinary Platform of Genome Analytics, Lübeck, Germany
-      year: 2019.02 - 2022.06
+      year: 02.2019 - 06.2022
       description:
         - Development of an automated workflow using Python programming and R to process and analyze genome-wide methylation profiles
         - Investigation of epigenetic profiles associated with human aging and neurodegenerative diseases
 
     - title: Student helper (part-time)
       institution: Lübeck Interdisciplinary Platform for Genome Analytics, Lübeck, Germany
-      year: 2018.08 - 2019.01
+      year: 08.2018 - 01.2019
       description:
         - Extraction of DNA from buccal swabs for genome-wide association studies in humans
 
     - title: Student helper (part-time)
       institution: Institute of Physics, University of Lübeck, Germany
-      year: 2017.10 - 2018.04
+      year: 10.2017 - 04.2018
       description:
         - Tutoring students in the practical courses for physics and biophysics
 
     - title: Student helper (part-time)
       institution: Institute of Chemistry, University of Lübeck, Germany
-      year: 2013.10 - 2014.10
+      year: 10.2013 - 10.2014
       description:
         - Tutoring students in the practical courses for anorganic and organic chemistry
 
